src/test/resources/semantic/reject/indexNonArray.ul
void main() {
}

void foo() {
    int foo;
    foo[5];
}
